--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
 
 </body>
-<footer>
+<footer class ="подвал">
     <a href="https://t.me/stradico" target="_blank" rel="noopener noreferrer">
     <img class="socicon tg" src="assets/footer/telegram.png" alt="Telegram">
 </a>
