--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Профориентация</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/script.js" defer></script>
@@ -12,20 +13,20 @@
 
 
 
-    <div class="container text-center mt-5">
-        <h1>Профориентация для школьников</h1>
-        <p class="mt-3">Пройди тест и узнай, какое направление тебе подходит</p>
-        <a href="test.html" class="btn btn-primary btn-lg mt-3">Пройти тест</a>
-    </div>
+<div class="container text-center mt-5">
+    <h1>Профориентация для школьников</h1>
+    <p class="mt-3">Пройди тест и узнай, какое направление тебе подходит</p>
+    <a href="test.html" class="btn btn-primary btn-lg mt-3">Пройти тест</a>
+</div>
 
 </body>
-<footer class ="подвал">
+<footer class="подвал">
     <a href="https://t.me/stradico" target="_blank" rel="noopener noreferrer">
-    <img class="socicon tg" src="assets/footer/telegram.png" alt="Telegram">
-</a>
+        <img class="socicon tg" src="assets/footer/telegram.png" alt="Telegram">
+    </a>
 
-  <p>МБОУ «ГЮЛ №86»</p>
-  
+    <p>МБОУ «ГЮЛ №86»</p>
+
 
 </footer>
 
