--- a/result.html
+++ b/result.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Результат</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/script.js" defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
